--- a/index.html
+++ b/index.html
@@ -585,7 +585,8 @@
                 </div>
             </div>  
             <div class="operation">
-                <a href="app/signed.apk" class="btn-install download-app-link">
+                <a href="https://github.com/USERNAME/REPO/releases/download/v1.0/app.apk
+" class="btn-install download-app-link">
                 Install
               </a>
         </div>
@@ -679,3 +680,4 @@
     
 </body>
 </html>
+
